fix: fixes -root-bg bleeding in children themes and opaque overlay in drawer-side with data-theme
- use theme --root-bg as source of truth for bg color (default it to --color-base-100)
- use a transparent bg for drawer-side so that it does not become opaque when it is themed
- only apply change to bg color on root when modal/drawer is open
- remove useless scrollbar-gutter stable set on open modal

close #3928

--- a/packages/daisyui/src/base/rootcolor.css
+++ b/packages/daisyui/src/base/rootcolor.css
@@ -3,3 +3,7 @@
   background-color: var(--root-bg, var(--color-base-100));
   color: var(--color-base-content);
 }
+
+:where(:root, [data-theme]) {
+  --root-bg: var(--color-base-100);
+}
